--- a/render.yaml
+++ b/render.yaml
@@ -2,16 +2,14 @@ services:
   - type: web
     name: travel-the-world
     env: python
-    workingDir: TERCERENTREGA
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn Travel_the_World.Travel_the_World.wsgi:application
+    rootDir: TERCERENTREGA/Travel_the_World/Travel_the_World
+    buildCommand: pip install -r ../../requirements.txt
+    startCommand: gunicorn Travel_the_World.wsgi:application
     envVars:
       - key: DJANGO_SETTINGS_MODULE
-        value: Travel_the_World.Travel_the_World.settings
+        value: Travel_the_World.settings
       - key: PYTHON_VERSION
         value: 3.11
-      - key: PYTHONPATH
-        value: ./Travel_the_World
       - key: DATABASE_URL
         fromDatabase:
           name: travel-db
